# openenv-gen

./: .gitignore  README.md
Agents/env_generator/: README.md  __init__.py  context.py  example.py  generate_env.py  llm_generate.py  orchestrator.py  workflow.yaml
Agents/examples/: code_builder_agent.py
Agents/utils/: README.md  __init__.py  base_agent.py  communication.py  config.py  debug.py  llm.py  memory.py  message.py  planner.py  planning_agent.py  prompt.py  reasoning.py  requirements.txt  state.py  stuck_detector.py  tool.py
agent/data_engine/: __init__.py  __main__.py
agent/env_generator/: README.md  __init__.py
agent/examples/: README.md  __init__.py  test_code_builder.py
agent/utils/: config.py  debug.py  llm.py  memory.py  message.py  planner.py  prompt_loader.py  reasoning.py  requirements.txt  retry.py  stuck_detector.py  tool.py
calendar/: docker-compose.yml
calendar/calendar_api/: main.py
calendar/data/: calendar.db
data_engine/: cli.py  engine.py
data_engine/configs/: domains.yaml
data_engine/core/: discovery.py  validator.py
data_gen/: requirements.txt
data_gen/scripts/: test_data_sources.py
data_gen/types/: __init__.py  diffusion_flux.py  huggingface_dataset.py  source.py  web_scraper.py
demos/ebay-web/: .checkpoint.json  Makefile  README.md  docker-compose.yml
demos/expedia-1-web/: .checkpoint.json  (+1 more)
logs/: training.logs
openenv/: .gitignore  __init__.py
openenv/src/template/web/env/: __init__.py  pyproject.toml
paypal/: docker-compose.yml
test/: analyze_training_logs.py  training_analysis.json
(+1081 files in other folders)
